Yandex C++. Add final project, but not last version !!! This code pass only 6 tests !!! And this will bw the final version of final project.

--- a/C++/Yandex/src/CMakeLists.txt
+++ b/C++/Yandex/src/CMakeLists.txt
@@ -12,8 +12,19 @@ set(
 	"week_4/week_4.cpp"
 	"week_5/week_5.h"
 	"week_5/week_5.cpp"
-	"week_6/week_6.h"
-	"week_6/week_6.cpp"
+	"week_6/condition_parser.h"
+	"week_6/condition_parser.cpp"
+	"week_6/condition_parser_test.cpp"
+	"week_6/database.h"
+	"week_6/database.cpp"
+	"week_6/database_test.cpp"
+	"week_6/date.h"
+	"week_6/date.cpp"
+	"week_6/node.h"
+	"week_6/node.cpp"
+	"week_6/test_runner.h"
+	"week_6/token.h"
+	"week_6/token.cpp"
 	"unit_test/unit_test.h"
 	"unit_test/unit_test.cpp"	
 	"main.cpp"
