C++ Algo: Implementation of Splay Tree finished, Implementation of BST is complete + additional files for further implementation added.

--- a/C++/Algorithms/src/CMakeLists.txt
+++ b/C++/Algorithms/src/CMakeLists.txt
@@ -8,6 +8,12 @@ set(
 	"data_structures/data_structures.cpp"
 	"data_structures/splay_tree.h"
 	"data_structures/splay_tree.cpp"
+	"data_structures/bin_search_tree.h"
+	"data_structures/bin_search_tree.cpp"
+	"data_structures/prefix_tree.h"
+	"data_structures/prefix_tree.cpp"
+	"data_structures/b_tree.h"
+	"data_structures/b_tree.cpp"
 	"data_structures/bloom_filter.h"
 	"practice/practice.h"
 	"practice/practice.cpp"
