C++ Yandex. Red belt start

--- a/C++/Yandex/src/CMakeLists.txt
+++ b/C++/Yandex/src/CMakeLists.txt
@@ -2,29 +2,39 @@ cmake_minimum_required(VERSION 3.5)
 
 set(
 	source_list
-	"week_1/week_1.h"
-	"week_1/week_1.cpp"
-	"week_2/week_2.h"
-	"week_2/week_2.cpp"
-	"week_3/week_3.h"
-	"week_3/week_3.cpp"
-	"week_4/week_4.h"
-	"week_4/week_4.cpp"
-	"week_5/week_5.h"
-	"week_5/week_5.cpp"
-	"week_6/condition_parser.h"
-	"week_6/condition_parser.cpp"
-	"week_6/condition_parser_test.cpp"
-	"week_6/database.h"
-	"week_6/database.cpp"
-	"week_6/database_test.cpp"
-	"week_6/date.h"
-	"week_6/date.cpp"
-	"week_6/node.h"
-	"week_6/node.cpp"
-	"week_6/test_runner.h"
-	"week_6/token.h"
-	"week_6/token.cpp"
+	"1_yellow_belt/week_1/week_1.h"
+	"1_yellow_belt/week_1/week_1.cpp"
+	"1_yellow_belt/week_2/week_2.h"
+	"1_yellow_belt/week_2/week_2.cpp"
+	"1_yellow_belt/week_3/week_3.h"
+	"1_yellow_belt/week_3/week_3.cpp"
+	"1_yellow_belt/week_4/week_4.h"
+	"1_yellow_belt/week_4/week_4.cpp"
+	"1_yellow_belt/week_5/week_5.h"
+	"1_yellow_belt/week_5/week_5.cpp"
+	"1_yellow_belt/week_6/condition_parser.h"
+	"1_yellow_belt/week_6/condition_parser.cpp"
+	"1_yellow_belt/week_6/condition_parser_test.cpp"
+	"1_yellow_belt/week_6/database.h"
+	"1_yellow_belt/week_6/database.cpp"
+	"1_yellow_belt/week_6/database_test.cpp"
+	"1_yellow_belt/week_6/date.h"
+	"1_yellow_belt/week_6/date.cpp"
+	"1_yellow_belt/week_6/node.h"
+	"1_yellow_belt/week_6/node.cpp"
+	"1_yellow_belt/week_6/test_runner.h"
+	"1_yellow_belt/week_6/token.h"
+	"1_yellow_belt/week_6/token.cpp"
+	"2_red_belt/week_1/week_1.h"
+	"2_red_belt/week_1/week_1.cpp"
+	"2_red_belt/week_2/week_2.h"
+	"2_red_belt/week_2/week_2.cpp"
+	"2_red_belt/week_3/week_3.h"
+	"2_red_belt/week_3/week_3.cpp"
+	"2_red_belt/week_4/week_4.h"
+	"2_red_belt/week_4/week_4.cpp"
+	"2_red_belt/week_5/week_5.h"
+	"2_red_belt/week_5/week_5.cpp"
 	"unit_test/unit_test.h"
 	"unit_test/unit_test.cpp"	
 	"main.cpp"
