Yandex C++. Brown belt. Initial commit.

--- a/C++/Yandex/src/CMakeLists.txt
+++ b/C++/Yandex/src/CMakeLists.txt
@@ -45,6 +45,16 @@ set(
 	"2_red_belt/week_4/week_4.cpp"
 	"2_red_belt/week_5/week_5.h"
 	"2_red_belt/week_5/week_5.cpp"
+	"3_brown_belt/1_AssociativeContainers/AssociativeContainers.h"
+	"3_brown_belt/1_AssociativeContainers/AssociativeContainers.cpp"
+	"3_brown_belt/2_NamespacesAndThisPtr/NamespacesAndThisPtr.h"
+	"3_brown_belt/2_NamespacesAndThisPtr/NamespacesAndThisPtr.cpp"
+	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.h"
+	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.cpp"
+	"3_brown_belt/4_SharedPtrAndRAII/SharedPtrAndRAII.h"
+	"3_brown_belt/4_SharedPtrAndRAII/SharedPtrAndRAII.cpp"
+	"3_brown_belt/5_ClearCodePrinciples/ClearCodePrinciples.h"
+	"3_brown_belt/5_ClearCodePrinciples/ClearCodePrinciples.cpp"
 	"unit_test/unit_test.h"
 	"unit_test/unit_test.cpp"
 	"time_logger/time_logger.h"
