--- a/C++/Yandex/src/CMakeLists.txt
+++ b/C++/Yandex/src/CMakeLists.txt
@@ -49,6 +49,8 @@ set(
 	"3_brown_belt/1_AssociativeContainers/AssociativeContainers.cpp"
 	"3_brown_belt/2_NamespacesAndThisPtr/NamespacesAndThisPtr.h"
 	"3_brown_belt/2_NamespacesAndThisPtr/NamespacesAndThisPtr.cpp"
+	"3_brown_belt/2_NamespacesAndThisPtr/xml.h"
+	"3_brown_belt/2_NamespacesAndThisPtr/xml.cpp"
 	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.h"
 	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.cpp"
 	"3_brown_belt/4_SharedPtrAndRAII/SharedPtrAndRAII.h"
