Yandex C++. Brown Belt. Week 2.
- JSON Load function
- INI load library (TODO: split to header & cpp files)

--- a/C++/Yandex/src/CMakeLists.txt
+++ b/C++/Yandex/src/CMakeLists.txt
@@ -51,6 +51,8 @@ set(
 	"3_brown_belt/2_NamespacesAndThisPtr/NamespacesAndThisPtr.cpp"
 	"3_brown_belt/2_NamespacesAndThisPtr/xml.h"
 	"3_brown_belt/2_NamespacesAndThisPtr/xml.cpp"
+	"3_brown_belt/2_NamespacesAndThisPtr/json.h"
+	"3_brown_belt/2_NamespacesAndThisPtr/json.cpp"
 	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.h"
 	"3_brown_belt/3_ConstQualifierAndUniquePtr/ConstQualifierAndUniquePtr.cpp"
 	"3_brown_belt/4_SharedPtrAndRAII/SharedPtrAndRAII.h"
