Code formatting and Cmake changes:
- Code formatting with CLANG
- Project structure chenges:
	- unit_tests & logging - separate static libraries
	- main project cmake is automatic now

--- a/C++/Yandex/CMakeLists.txt
+++ b/C++/Yandex/CMakeLists.txt
@@ -2,9 +2,14 @@
 cmake_minimum_required(VERSION 3.5)
 
 set(PROJECT_NAME yandex_cpp)
+set(CMAKE_CXX_STANDARD 17)
 
 project( ${PROJECT_NAME} )
 
-set( SOURCE_ROOT ../src )
+add_subdirectory(time_logger) 	# Static library
+add_subdirectory(unit_test) 	# Static library
 
-add_subdirectory(src)
+set( _src_root_path ${CMAKE_CURRENT_SOURCE_DIR}/src )
+add_subdirectory(src) 			# Our Excecutable
+
+
